Changes - adding method and route about run websocket in authController.php
